--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>Tests.LoginTest.userLoginRandom</td></tr>
+<tr><td>Tests.LoginTest.userLoginBlank</td></tr>
+<tr><td>Tests.LoginTest.zurückZumLogin</td></tr>
 </table>
