--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,20 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="92a28a">  <td>24/10/21 04:47:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.launchURL()[pri:0, instance:Tests.LoginTest@5f049ea1]">&gt;&gt;launchURL</td> 
-<td>&nbsp;</td>  <td>main@1368096336</td>   <td></td> </tr>
-<tr bgcolor="92a28a">  <td>24/10/21 04:47:17</td>   <td>1633</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login1()[pri:0, instance:Tests.LoginTest@5f049ea1]">login1</td> 
-  <td>main@1368096336</td>   <td></td> </tr>
-<tr bgcolor="b3b36e">  <td>24/10/21 04:47:14</td>   <td>-1772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setDriver()[pri:0, instance:Tests.LoginTest@5f049ea1]">&gt;&gt;setDriver</td> 
-<td>&nbsp;</td>  <td>main@1368096336</td>   <td></td> </tr>
-<tr bgcolor="b3b36e">  <td>24/10/21 04:47:14</td>   <td>-1772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setDriver()[pri:0, instance:Tests.LoginTest@5f049ea1]">&gt;&gt;setDriver</td> 
-<td>&nbsp;</td>  <td>main@1368096336</td>   <td></td> </tr>
-<tr bgcolor="92a28a">  <td>24/10/21 04:46:57</td>   <td>-18590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login()[pri:0, instance:Tests.LoginTest@5f049ea1]">login</td> 
-  <td>main@1368096336</td>   <td></td> </tr>
-<tr bgcolor="92a28a">  <td>24/10/21 04:47:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.launchURL()[pri:0, instance:Tests.LoginTest@5f049ea1]">&gt;&gt;launchURL</td> 
-<td>&nbsp;</td>  <td>main@1368096336</td>   <td></td> </tr>
-<tr bgcolor="b3b36e">  <td>24/10/21 04:47:24</td>   <td>8656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitDriver()[pri:0, instance:Tests.LoginTest@5f049ea1]">&lt;&lt;quitDriver</td> 
-<td>&nbsp;</td>  <td>main@1368096336</td>   <td></td> </tr>
-<tr bgcolor="b3b36e">  <td>24/10/21 04:47:24</td>   <td>8656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitDriver()[pri:0, instance:Tests.LoginTest@5f049ea1]">&lt;&lt;quitDriver</td> 
-<td>&nbsp;</td>  <td>main@1368096336</td>   <td></td> </tr>
+<tr bgcolor="628f7b">  <td>24/10/25 22:31:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setDriver()[pri:0, instance:Tests.LoginTest@233795b6]">&gt;&gt;setDriver</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="a7c7e0">  <td>24/10/25 22:31:22</td>   <td>4083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.acceptAndContinue()[pri:0, instance:Tests.LoginTest@233795b6]">&gt;&gt;acceptAndContinue</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="628f7b">  <td>24/10/25 22:31:46</td>   <td>27938</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitDriver()[pri:0, instance:Tests.LoginTest@233795b6]">&lt;&lt;quitDriver</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="a7c7e0">  <td>24/10/25 22:31:24</td>   <td>6094</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.validLogin()[pri:0, instance:Tests.LoginTest@233795b6]">validLogin</td> 
+  <td>main@617901222</td>   <td></td> </tr>
 </table>
