--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,36 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9580bf">  <td>24/10/21 18:59:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.launchURL()[pri:0, instance:Tests.LoginTest@4218d6a3]">&gt;&gt;launchURL</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1239807799</td>   <td></td> </tr>
-<tr bgcolor="b7ac8f">  <td>24/10/21 18:59:34</td>   <td>6367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitDriver()[pri:0, instance:Tests.LoginTest@4218d6a3]">&lt;&lt;quitDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1239807799</td>   <td></td> </tr>
-<tr bgcolor="b7ac8f">  <td>24/10/21 18:59:17</td>   <td>-10363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setDriver(java.lang.String)[pri:0, instance:Tests.LoginTest@4218d6a3]">&gt;&gt;setDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1239807799</td>   <td></td> </tr>
-<tr bgcolor="b7ac8f">  <td>24/10/21 18:59:17</td>   <td>-10363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setDriver(java.lang.String)[pri:0, instance:Tests.LoginTest@4218d6a3]">&gt;&gt;setDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1239807799</td>   <td></td> </tr>
-<tr bgcolor="9580bf">  <td>24/10/21 18:59:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.launchURL()[pri:0, instance:Tests.LoginTest@4218d6a3]">&gt;&gt;launchURL</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1239807799</td>   <td></td> </tr>
-<tr bgcolor="b7ac8f">  <td>24/10/21 18:59:34</td>   <td>6367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitDriver()[pri:0, instance:Tests.LoginTest@4218d6a3]">&lt;&lt;quitDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1239807799</td>   <td></td> </tr>
-<tr bgcolor="9580bf">  <td>24/10/21 18:59:11</td>   <td>-15973</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login()[pri:0, instance:Tests.LoginTest@4218d6a3]">login</td> 
-  <td>TestNG-tests-1@1239807799</td>   <td></td> </tr>
-<tr bgcolor="9580bf">  <td>24/10/21 18:59:29</td>   <td>1977</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login1()[pri:0, instance:Tests.LoginTest@4218d6a3]">login1</td> 
-  <td>TestNG-tests-1@1239807799</td>   <td></td> </tr>
-<tr bgcolor="9580bf">  <td>24/10/21 18:59:31</td>   <td>3739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.launchURL()[pri:0, instance:Tests.LoginTest@279fedbd]">&gt;&gt;launchURL</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1970436060</td>   <td></td> </tr>
-<tr bgcolor="b7ac8f">  <td>24/10/21 18:59:26</td>   <td>-1455</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setDriver(java.lang.String)[pri:0, instance:Tests.LoginTest@279fedbd]">&gt;&gt;setDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1970436060</td>   <td></td> </tr>
-<tr bgcolor="9580bf">  <td>24/10/21 18:59:31</td>   <td>3739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.launchURL()[pri:0, instance:Tests.LoginTest@279fedbd]">&gt;&gt;launchURL</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1970436060</td>   <td></td> </tr>
-<tr bgcolor="b7ac8f">  <td>24/10/21 18:59:37</td>   <td>10055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitDriver()[pri:0, instance:Tests.LoginTest@279fedbd]">&lt;&lt;quitDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1970436060</td>   <td></td> </tr>
-<tr bgcolor="9580bf">  <td>24/10/21 18:59:19</td>   <td>-7917</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login()[pri:0, instance:Tests.LoginTest@279fedbd]">login</td> 
-  <td>TestNG-tests-2@1970436060</td>   <td></td> </tr>
-<tr bgcolor="b7ac8f">  <td>24/10/21 18:59:26</td>   <td>-1455</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setDriver(java.lang.String)[pri:0, instance:Tests.LoginTest@279fedbd]">&gt;&gt;setDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1970436060</td>   <td></td> </tr>
-<tr bgcolor="9580bf">  <td>24/10/21 18:59:33</td>   <td>5781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login1()[pri:0, instance:Tests.LoginTest@279fedbd]">login1</td> 
-  <td>TestNG-tests-2@1970436060</td>   <td></td> </tr>
-<tr bgcolor="b7ac8f">  <td>24/10/21 18:59:37</td>   <td>10055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitDriver()[pri:0, instance:Tests.LoginTest@279fedbd]">&lt;&lt;quitDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1970436060</td>   <td></td> </tr>
+<tr bgcolor="82f9e2">  <td>24/10/25 22:02:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTestShortRoute.acceptAndContinue()[pri:0, instance:Tests.LoginTestShortRoute@7586beff]">&gt;&gt;acceptAndContinue</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="628f7b">  <td>24/10/25 22:02:23</td>   <td>-2374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setDriver()[pri:0, instance:Tests.LoginTestShortRoute@7586beff]">&gt;&gt;setDriver</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="82f9e2">  <td>24/10/25 22:02:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTestShortRoute.acceptAndContinue()[pri:0, instance:Tests.LoginTestShortRoute@7586beff]">&gt;&gt;acceptAndContinue</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="628f7b">  <td>24/10/25 22:02:49</td>   <td>23662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitDriver()[pri:0, instance:Tests.LoginTestShortRoute@7586beff]">&lt;&lt;quitDriver</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="82f9e2">  <td>24/10/25 22:01:10</td>   <td>-75277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestShortRoute.userLoginBlank()[pri:0, instance:Tests.LoginTestShortRoute@7586beff]">userLoginBlank</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="82f9e2">  <td>24/10/25 22:02:27</td>   <td>2385</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestShortRoute.zurückZumLogin()[pri:0, instance:Tests.LoginTestShortRoute@7586beff]">zurückZumLogin</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="82f9e2">  <td>24/10/25 22:02:04</td>   <td>-20702</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestShortRoute.validLogin()[pri:0, instance:Tests.LoginTestShortRoute@7586beff]">validLogin</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="82f9e2">  <td>24/10/25 22:02:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTestShortRoute.acceptAndContinue()[pri:0, instance:Tests.LoginTestShortRoute@7586beff]">&gt;&gt;acceptAndContinue</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="628f7b">  <td>24/10/25 22:02:49</td>   <td>23662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitDriver()[pri:0, instance:Tests.LoginTestShortRoute@7586beff]">&lt;&lt;quitDriver</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="628f7b">  <td>24/10/25 22:02:23</td>   <td>-2374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setDriver()[pri:0, instance:Tests.LoginTestShortRoute@7586beff]">&gt;&gt;setDriver</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="82f9e2">  <td>24/10/25 22:02:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTestShortRoute.acceptAndContinue()[pri:0, instance:Tests.LoginTestShortRoute@7586beff]">&gt;&gt;acceptAndContinue</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="628f7b">  <td>24/10/25 22:02:23</td>   <td>-2374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setDriver()[pri:0, instance:Tests.LoginTestShortRoute@7586beff]">&gt;&gt;setDriver</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="82f9e2">  <td>24/10/25 22:01:43</td>   <td>-42013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestShortRoute.userLoginRandom()[pri:0, instance:Tests.LoginTestShortRoute@7586beff]">userLoginRandom</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="628f7b">  <td>24/10/25 22:02:23</td>   <td>-2374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setDriver()[pri:0, instance:Tests.LoginTestShortRoute@7586beff]">&gt;&gt;setDriver</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="628f7b">  <td>24/10/25 22:02:49</td>   <td>23662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitDriver()[pri:0, instance:Tests.LoginTestShortRoute@7586beff]">&lt;&lt;quitDriver</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="628f7b">  <td>24/10/25 22:02:49</td>   <td>23662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitDriver()[pri:0, instance:Tests.LoginTestShortRoute@7586beff]">&lt;&lt;quitDriver</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
 </table>
